2008-04-14  Michael Hutchinson <mhutchinson@novell.com> 

	

2008-04-14  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/WebTypeManager.cs: Remove debug code.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Greatly improve
	  completion triggering behaviour. Most noticeable with tag
	  attributes.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Add server-side
	  comments to completion list.
	* MonoDevelop.AspNet.Parser/AspNetIndentStack.cs: Add more states,
	  document all the states' meaning, and handle closing some states.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Html/HtmlSchema.cs: Avoid unused variable warning.
	* gtk-gui/gui.stetic: Updated.
	* MonoDevelop.AspNet.Parser/AspNetIndentStack.cs: Woked on indent
	  stack. Not complete yet.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet.addin.xml: Use the new mime type extension to
	  register new file types.

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Add completion for
	  colours, enums and booleans. Walk into base members when attempting
	  attribute completion.

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/CodeBehind.cs: Add method for getting a
	  non-designer class.
	* MonoDevelop.AspNet/WebTypeManager.cs,
	  MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Add various
	  control lookup methods, including listing of ASP.NET controls.
	* MonoDevelop.Html/HtmlSchema.cs: Minor cleanup.
	* MonoDevelop.Html/HtmlSchemaService.cs: Improve lazy loading. Allow
	  forced preloading in a thread.
	* MonoDevelop.AspNet.addin.xml: Remove HTML 4 Transitional doctype
	  extension, as it's a hardcoded default.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Track API. Implement
	  ASP.NET control and attribute completion. Implement attribute value