@@ -114,6 +114,8 @@
     <File name="Schemas/W3C-License.html" subtype="Code" buildaction="FileCopy" />
     <File name="MonoDevelop.AspNet.Parser/AspNetIndentStack.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Components" />
